Added health endpoint for server
